--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <h5 class="nav-item">Product</h5>
         <h5 class="nav-item">Price</h5>
         <h5 class="nav-item">About</h5>
+       
       </div>
-      <img src="./images/actions.svg" alt="actions" />
+      <img class="action" src="./images/actions.svg" alt="actions" />
+      <ion-icon class="mob-menu" name="menu-outline"></ion-icon>
     </nav>
     <div class="intro-section">
       <div class="left-section">
@@ -70,5 +72,7 @@
         <button class="action-btn1">Add to chart</button>
       </div>
     </div>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
